# Analytik

./: main.py  pyproject.toml
static/: script.js  style.css
templates/: 404.html  badge.html  dashboard.html  get.html  help.html  landing.html  layout.html  shorelinesurfteam.html
