[tool.poetry]
name = "repl_python3_beta_Analytik"
version = "0.1.0"
description = ""
authors = ["Arjun C <arjun.c.1818@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
ua-parser = "^0.10.0"
replit = "^3.1.0"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
